fix(style): add spacing between post navigation items

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -119,6 +119,10 @@
   margin: 3rem auto;
 }
 
+.post-recent dt + dd + dt {
+  margin-top: 1rem;
+}
+
 /*
  * for mobile
  */
